# amazon_reviews_recommendation

./: .gitignore  README.md  app.ipynb  app.py  config.py  download_data.sh  eda.ipynb  model_selection.ipynb  pyproject.toml
classes/: app_data_processing.py  model.py
report/: README.md  app.ipynb  eda.ipynb  model_selection.ipynb
