[tool.poetry]
name = "amazon reviews recommender system"
version = "1.0.1"
description = ""
authors = ["Oleg Podlipalin <backspace.by@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"
pandas = "^2.2.2"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
scikit-learn = "^1.5.1"
imblearn = "^0.0"
sentence-transformers = "^3.0.1"
tensorflow = "^2.17.0"
implicit = "^0.7.2"
pyarrow = "^17.0.0"
flask = "^3.0.3"
tf-keras = "^2.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
